[project]
name = "antigravity-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorgram-py>=1.2.0",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
]
